--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,4 +173,5 @@ if(BUILD_STUDIO_APP AND (STUDIO_WITH_GUILE OR STUDIO_WITH_PYTHON) AND Qt5Core_FO
     add_subdirectory(studio)
 endif(BUILD_STUDIO_APP AND (STUDIO_WITH_GUILE OR STUDIO_WITH_PYTHON) AND Qt5Core_FOUND)
 
+# new cli project
 add_subdirectory(cli)
