disable more packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,15 +84,15 @@ if(NOT MSVC)
     #    pkg_check_modules(GUILE guile-3.0>=3.0.0)
     #endif()
 
-    pkg_check_modules(EIGEN REQUIRED eigen3>=3.2.92)
+    //pkg_check_modules(EIGEN REQUIRED eigen3>=3.2.92)
 else()
     find_package(eigen3 REQUIRED)
     #find_package(boost REQUIRED 1.65.0)
 endif()
 
 # These packages have consistent names across OS's
-find_package(PNG REQUIRED)
-find_package(Python3 COMPONENTS Interpreter Development)
+#find_package(PNG REQUIRED)
+#find_package(Python3 COMPONENTS Interpreter Development)
 
 # Both Windows and Linux will attempt to build the Studio UI
 if (BUILD_STUDIO_APP)
