--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ endif()
 ################################################################################
 # Find all packages here at the top level so we can print debugging info
 if( ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
-    set(USE_FLAGS "-s USE_BOOST_HEADERS=1 -s USE_ZLIP=1 -s USE_LIBPNG=1")
+    set(USE_FLAGS "-s USE_BOOST_HEADERS=1 -s USE_ZLIB=1 -s USE_LIBPNG=1")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${USE_FLAGS}")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS}")
