--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,9 @@ if( ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS}")
     set(CMAKE_EXECUTABLE_SUFFIX .html)
-    find_package(EIGEN REQUIRED)
+    
+    SET( EIGEN_INCLUDE_DIRS "/usr/include/eigen3" )
+
 else()
     if(NOT MSVC)
       # These packages have different naming conventions in MSVC vs Linux
