--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,4 +186,4 @@ if(BUILD_STUDIO_APP AND (STUDIO_WITH_GUILE OR STUDIO_WITH_PYTHON) AND Qt5Core_FO
 endif(BUILD_STUDIO_APP AND (STUDIO_WITH_GUILE OR STUDIO_WITH_PYTHON) AND Qt5Core_FOUND)
 
 # new cli project
-#add_subdirectory(cli)
+add_subdirectory(cli)
