--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,11 +107,11 @@ else()
     
 endif()
 
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-if (UNIX AND NOT(APPLE))
-    find_package(Threads REQUIRED)
-    set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -latomic")
-endif(UNIX AND NOT(APPLE))
+# set(THREADS_PREFER_PTHREAD_FLAG ON)
+# if (UNIX AND NOT(APPLE))
+#     find_package(Threads REQUIRED)
+#     set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -latomic")
+# endif(UNIX AND NOT(APPLE))
 
 # Both Windows and Linux will attempt to build the Studio UI
 if (BUILD_STUDIO_APP)
